arrumando bug do z-index do anydesk

--- a/templates/static/a_lista_ramal/css/add_ramal.css
+++ b/templates/static/a_lista_ramal/css/add_ramal.css
@@ -12,6 +12,7 @@ dialog {
     border-radius: 8px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     border: 1px solid rgba(0, 0, 0, 0.582);
+    z-index: 9999999;
 }
 
 .top {
